--- a/build.gradle
+++ b/build.gradle
@@ -16,9 +16,23 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven{
+		//Oracle Driver 공식 Repository
+		url "https://repo1.maven.org/maven2/com/oracle/database/"
+	}
 }
 
 dependencies {
+	// 오라클 드라이버
+	implementation 'com.oracle.database.jdbc:ojdbc6:11.2.0.4'
+	
+	// 설정 파일(.properties, .yml, ...)을 암호화하여 사용하기위한 라이브러리
+	implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3'
+	
+	// Frontend 개발자와 협업을 위해 API문서 작성 라이브러리  
+	implementation 'io.springfox:springfox-swagger2:2.6.1'
+	implementation 'io.springfox:springfox-swagger-ui:2.6.1'
+
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
