--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ repositories {
 }
 
 dependencies {
+	// 회원 비밀번호를 암호화 하기위한 JWT 라이브러리 
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+	
 	// 오라클 드라이버
 	implementation 'com.oracle.database.jdbc:ojdbc6:11.2.0.4'
 	
@@ -34,7 +37,7 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger-ui:2.6.1'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -42,7 +45,7 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-	//testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 test {
