--- a/src/main/resources/messages/exception.properties
+++ b/src/main/resources/messages/exception.properties
@@ -3,3 +3,12 @@ unKnown.msg: 알수 없는 오류가 발생하였습니다.
 
 userNotFound.code: -1000
 userNotFound.msg: 존재하지 않는 회원입니다.
+
+idSigninFailed.code: -1001
+idSigninFailed.msg: 계정이 존재하지 않거나 아이디 비밀번호가 정확하지 않습니다.
+
+entryPointException.code: -1002
+entryPointException.msg: 해당 리소스에 접근하기 위한 권한이 없습니다.
+
+accessDenied.code: -1003
+accessDenied.msg: 보유한 권한으로 접근할수 없는 리소스 입니다.
