--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ repositories {
 }
 
 dependencies {
+
+	//request로 받은 param의 유효성검사를 위한 라이브러리
+	implementation('org.springframework.boot:spring-boot-starter-validation')
+	
 	//social 로그인 토큰을 받아오기 위해 임시사용 
 	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
 
