--- a/src/main/resources/messages/exception.properties
+++ b/src/main/resources/messages/exception.properties
@@ -18,3 +18,9 @@ communicationError.msg: 통신 중 오류가 발생하였습니다.
 
 existingUser.code: -1005
 existingUser.msg: 이미 가입한 회원입니다. 로그인을 해주십시오.
+
+notOwner.code: -1006
+notOwner.msg: 해당 자원의 소유자가 아닙니다.
+
+resourceNotExist.code: -1007
+resourceNotExist.msg: 요청한 자원이 존재 하지 않습니다.
