vs code IDE로 전환하여 ignore 추가

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,17 @@ build/
 .springBeans
 .sts4-cache
 
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
 
 # Created by https://www.toptal.com/developers/gitignore/api/eclipse,gradle,react
 # Edit at https://www.toptal.com/developers/gitignore?templates=eclipse,gradle,react
