deploy script 수정

--- a/appspec.yml
+++ b/appspec.yml
@@ -1,15 +1,15 @@
 version: 0.0
 os: linux
 files:
-  - source:  /
-    destination: /home/ubuntu/applications/kimsboard/build/
-permissions:
-  - object: /home/ubuntu/applications/kimsboard/build/
+  - source:  / #S3에 받아온 build 결과물의 root로 지정 (전체 파일을 사용)
+    destination: /home/ubuntu/applications/kimsboard/build/ #source에서 설정한 file을 받을위치
+permissions: # CodeDeploy에서 EC2서버로 넘겨준 파일들을 모두 ubuntu 사용자,그룹의 권한을 갖도록 합니다.
+  - object: /
+    pattern: "**"
     owner: ubuntu
     group: ubuntu
-    mode: 755    
 hooks:
   AfterInstall:
-    - location: execute-deploy.sh
-      timeout: 60
-      runas: root
+    - location: scripts/deploy.sh
+      timeout: 180 #180초 이상 수행하면 실패
+      runas: ubuntu
