--- a/.gitignore
+++ b/.gitignore
@@ -70,21 +70,13 @@ local.properties
 # Spring Boot Tooling
 .sts4-cache/
 
-### react ###
-.DS_*
-*.log
-logs
-**/*.backup.*
-**/*.back.*
+### Vuejs ###
+# Recommended template: Node.gitignore
 
-node_modules
-bower_components
-
-*.sublime*
-
-psd
-thumb
-sketch
+node_modules/
+dist/
+npm-debug.log
+yarn-error.log
 
 ### VisualStudioCode ###
 .vscode/*
