[add] 추가 setting

--- a/package.json
+++ b/package.json
@@ -4,24 +4,26 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
-    "history": "^4.10.1",
-  
-    "isarray": "^0.0.1",
-    "js-tokens": "^4.0.0",
-    "is-promise": "^2.2.2",
     "axios": "^0.19.2",
     "debug": "^3.1.0",
-    "ms": "^2.0.0",
-    "loose-envify": "^1.4.0",
+    "history": "^4.10.1",
+    "is-promise": "^2.2.2",
+    "isarray": "^0.0.1",
+    "js-tokens": "^4.0.0",
     "lodash": "^4.17.19",
+    "loose-envify": "^1.4.0",
+    "ms": "^2.0.0",
     "object-assign": "^4.1.1",
     "path-to-regexp": "^1.8.0",
     "prop-types": "^15.7.2",
     "regenerator-runtime": "^0.13.7",
-    "tiny-invariant": "^1.1.0",
     "symbol-observable": "^1.2.0",
+    "tiny-invariant": "^1.1.0",
     "tiny-warning": "^1.0.3",
-    "value-equal": "^1.0.1"
+    "value-equal": "^1.0.1",
+    "vue": "^2.6.11",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.11"
   },
   "devDependencies": {
     "webpack": "^4.44.1",
