--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "debug": "^3.1.0",
+    "es6-promise": "^4.2.8",
     "history": "^4.10.1",
     "is-promise": "^2.2.2",
     "isarray": "^0.0.1",
@@ -27,6 +28,9 @@
     "vue": "^2.6.11",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.11",
+    "vue-router": "^3.4.3",
+    "vuex": "^3.5.1",
+    "@vue/cli-plugin-vuex": "^4.5.3",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
