--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@vue/cli-plugin-vuex": "^4.5.3",
     "axios": "^0.19.2",
     "debug": "^3.1.0",
     "es6-promise": "^4.2.8",
@@ -21,16 +22,15 @@
     "symbol-observable": "^1.2.0",
     "tiny-invariant": "^1.1.0",
     "tiny-warning": "^1.0.3",
-    "value-equal": "^1.0.1"
+    "value-equal": "^1.0.1",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "html-webpack-plugin": "^4.3.0",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.3",
-    "vue-template-compiler": "^2.6.11",
     "vue-router": "^3.4.3",
-    "vuex": "^3.5.1",
-    "@vue/cli-plugin-vuex": "^4.5.3",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
