[fix] 1. refresh 및 driect url call 오류수정 / 2. 요청 url 및 응답결과 처리 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,14 @@ spring:
     active: local
     include:
     - key-profile
+  # mustache:
+  #   prefix: classpath:/static/
+  #   suffix: .html
+  # mvc:
+  #   static-path-pattern: /static/**
+  # resources:
+  #   static-locations: classpath:/static/
+  #   add-mappings: true
   jpa:
     hibernate:
       ddl-auto: update #데이터 베이스 초기화 전략 사용 안함
