--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "tiny-invariant": "^1.1.0",
     "tiny-warning": "^1.0.3",
     "value-equal": "^1.0.1",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "vue-router": "^3.4.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -37,7 +38,6 @@
     "sass-loader": "^9.0.3",
     "vue": "^2.6.11",
     "vue-loader": "^15.9.3",
-    "vue-router": "^3.4.3",
     "vue-template-compiler": "^2.6.11",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
