[fix] usertoken 수정
[add] tailwindcss

--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
     "ms": "^2.0.0",
     "object-assign": "^4.1.1",
     "path-to-regexp": "^1.8.0",
+    "postcss-loader": "^3.0.0",
     "prop-types": "^15.7.2",
     "regenerator-runtime": "^0.13.7",
     "style-loader": "^1.2.1",
     "symbol-observable": "^1.2.0",
+    "tailwindcss": "^1.7.6",
     "tiny-invariant": "^1.1.0",
     "tiny-warning": "^1.0.3",
     "value-equal": "^1.0.1",
-    "vuex": "^3.5.1",
-    "vue-router": "^3.4.3"
+    "vue-router": "^3.4.3",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
