--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "tiny-warning": "^1.0.3",
     "value-equal": "^1.0.1",
     "vue-router": "^3.4.3",
+    "vue-simple-spinner": "^1.2.10",
     "vuex": "^3.5.1"
   },
   "devDependencies": {
