--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-loader": "^8.1.0",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^4.2.1",
+    "dotenv": "^8.2.0",
     "html-webpack-plugin": "^4.3.0",
     "sass": "^1.26.10",
     "sass-loader": "^9.0.3",
@@ -48,8 +49,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/.bin/webpack",
-    "start": "webpack-dev-server"
+    "build": "./node_modules/.bin/webpack --mode production",
+    "start": "webpack-dev-server --mode development"
   },
   "repository": {
     "type": "git",
