--- a/.github/workflows/frontend_workflow.yml
+++ b/.github/workflows/frontend_workflow.yml
@@ -1,7 +1,7 @@
 # kimsboard 프로젝트의 빠른 개발과 생산성 향상을 위해 CI/CD tool인 Github Actions를 사용
 # 프론트엔드(Vue.js) 기반의 프로젝트의 모듈관리 npm의 workflow
 
-name: frontent_workflow
+name: frontend_workflow
 
 # 환경 변수 $변수명 으로 사용
 # ex) $BUCKET_NAME
@@ -59,5 +59,5 @@ jobs:
     
     # Upload to S3 stroage
     - name: Upload to S3
-      run: aws s3 cp /frontend/dist/ s3://$BUCKET_NAME --region ap-northeast-2        
+      run: aws s3 cp frontend/dist s3://vue-build-output/ --region ap-northeast-2 --recursive        
     
