--- a/.github/workflows/build_deploy_workflow.yml
+++ b/.github/workflows/build_deploy_workflow.yml
@@ -1,13 +1,14 @@
 # kimsboard 프로젝트의 빠른 개발과 생산성 향상을 위해 CI/CD tool인 Github Actions를 사용
-# 백엔드(Java) 기반의 프로젝트의 의존성 관리, 패키징, 테스팅, 컴파일 등을 관리하는 gradle용 workflow
+# Front-end와 Back-end 소스코드를 테스팅, 빌드, 패키징등의 작업을 관리하는 workflow 파일 
 
-name: backend_workflow
+name: build_deploy
 
 # 환경 변수 $변수명 으로 사용
-# ex) $PROJECT_NAME
+# ex) $BUCKET_NAME
 env: 
+  FRONT_BUCKET_NAME : vue-build-output
   PROJECT_NAME : kimsboard
-  BUCKET_NAME : webservice-deploy-storage
+  BACK_BUCKET_NAME : webservice-deploy-storage
 
 # master 브런치로 push할 때만 동작
 on:
@@ -73,8 +74,56 @@ jobs:
     
     # Upload to S3 stroage
     - name: Upload to S3
-      run: aws s3 cp build.zip s3://$BUCKET_NAME/deploy/$PROJECT_NAME.zip --region ap-northeast-2        
+      run: aws s3 cp build.zip s3://$BACK_BUCKET_NAME/deploy/$PROJECT_NAME.zip --region ap-northeast-2        
     
     # AWS CodeDeploy 실행 
     - name: Code Deploy
-      run: aws deploy create-deployment --application-name WebserviceCodeDeploy --deployment-config-name CodeDeployDefault.OneAtATime --deployment-group-name kimsboard --s3-location bucket=$BUCKET_NAME,bundleType=zip,key=deploy/$PROJECT_NAME.zip
+      run: aws deploy create-deployment --application-name WebserviceCodeDeploy --deployment-config-name CodeDeployDefault.OneAtATime --deployment-group-name kimsboard --s3-location bucket=$BACK_BUCKET_NAME,bundleType=zip,key=deploy/$PROJECT_NAME.zip
+
+  # frontend build용 job
+  front_build:
+  
+    # runner의 환경
+    runs-on: ubuntu-latest
+    
+    # 실행할 작업들
+    steps:
+    # https://github.com/actions/checkout
+    - uses: actions/checkout@v2
+    
+    - name: Use Node.js
+      uses: actions/setup-node@v1
+      with:
+        node-version: '12.x'
+
+    - name: Get yarn cache directory path
+      id: yarn-cache-dir-path
+      run: echo "::set-output name=dir::$(yarn cache dir)"
+    
+    - uses: actions/cache@v2
+      id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+      with:
+        path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+        key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-yarn-
+
+    - name: Install dependencies
+      run: yarn install
+      
+    - name: Build Projection
+      run: yarn build
+
+    # aws 인증서비스
+    # github repository에서 Setting에서 사용할 암호화된 변수
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{secrets.AWS_REGION}}
+
+    # Upload to S3 stroage
+    - name: Upload to S3
+      run: aws s3 cp frontend/dist s3://$FRONT_BUCKET_NAME/ --region ap-northeast-2 --recursive
+    
